tests/transpiler/x/swift/group_by_having.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/023/main.swift:6:28: warning: forced cast of 'String' to same type has no effect
 4 | var _res: [[String: Any]] = []
 5 | for p in people {
 6 |     let _key = (p["city"]! as! String)
   |                            `- warning: forced cast of 'String' to same type has no effect
 7 |     let _ks = String(describing: _key)
 8 |     var _g = _groups[_ks] ?? ["key": _key, "items": []]

/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/023/main.swift:17:51: warning: forced cast of 'Int' to same type has no effect
15 | _list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
16 | for g in _list {
17 |     if ((((g["items"] as! [[String: Any]]).count) as! Int) >= 4) {
   |                                                   `- warning: forced cast of 'Int' to same type has no effect
18 |         _res.append(["city": (g["key"]! as! String), "num": (((g["items"] as! [[String: Any]]).count) as! Int)])
19 |     }

/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/023/main.swift:18:103: warning: forced cast of 'Int' to same type has no effect
16 | for g in _list {
17 |     if ((((g["items"] as! [[String: Any]]).count) as! Int) >= 4) {
18 |         _res.append(["city": (g["key"]! as! String), "num": (((g["items"] as! [[String: Any]]).count) as! Int)])
   |                                                                                                       `- warning: forced cast of 'Int' to same type has no effect
19 |     }
20 | }

/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/023/main.swift:22:1: error: cannot find 'json' in scope
20 | }
21 | return _res })()
22 | json(big)
   | `- error: cannot find 'json' in scope
23 | 
