tests/transpiler/x/swift/group_by_having.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:41:24 GMT+7
let people = [["name": "Alice", "city": "Paris"], ["name": "Bob", "city": "Hanoi"], ["name": "Charlie", "city": "Paris"], ["name": "Diana", "city": "Hanoi"], ["name": "Eve", "city": "Paris"], ["name": "Frank", "city": "Hanoi"], ["name": "George", "city": "Paris"]]
let big = ({ var _groups: [String: [String: Any]] = [:]
var _res: [[String: Any]] = []
for p in people {
    let _key = (p["city"]! as! String)
    let _ks = String(describing: _key)
    var _g = _groups[_ks] ?? ["key": _key, "items": []]
    var _item: [String: Any] = ["__join__": true]
    _item["p"] = p
    _g["items"] = (_g["items"] as! [Any]) + [_item]
    _groups[_ks] = _g
}
var _list = Array(_groups.values)
_list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
for g in _list {
    if ((((g["items"] as! [[String: Any]]).count) as! Int) >= 4) {
        _res.append(["city": (g["key"]! as! String), "num": (((g["items"] as! [[String: Any]]).count) as! Int)])
    }
}
return _res })()
json(big)
